test/Fail/Issue4435-2.err
Issue4435-2.agda:12.6-17: error: [ClashingDefinition]
Multiple definitions of Foo. Previous definition at
Issue4435-2.agda:5.6-9
when scope checking the declaration
  data Foo a : Set
